# jenkins-lesson

./: .prospector.yml  Dockerfile  Jenkinsfile  Jenkinsfile_script  pytest.ini  requirements.txt  setup.cfg
src/: __init__.py  maths.py
tests/: test_abs.py
