[metadata]
name = mathpython
version = 0.0.1
author = Mike
author_email = mike@example.com
description = A small mathpython package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src